# Notes-app-Fast_Api-

./: .env  .gitignore  alembic.ini  main.py  notes.db  pyproject.toml
alembic/: env.py
alembic/versions/: 0dca52b0bd25_add_users_table.py  5c67a2a8ab86_add_title_column.py  a1ea28db6a02_changes_in_column_name.py
app/: app.py  db.py  models.py  schemas.py  security.py
