[project]
name = "notesapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.5",
    "fastapi>=0.137.1",
    "fastapi-users[sqlalchemy]>=15.0.5",
    "passlib[bcrypt]>=1.7.4",
    "pwdlib>=0.3.0",
    "python-dotenv>=1.2.2",
    "python-jose>=3.5.0",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
]
